<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/minesweeper_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_name"
        android:textColor="#F44336"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/best_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/best_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/minesweeper_heading"
        app:layout_constraintStart_toStartOf="@+id/minesweeper_heading"
        app:layout_constraintTop_toBottomOf="@+id/minesweeper_heading" />

    <TextView
        android:id="@+id/last_game_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_game_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/best_time"
        app:layout_constraintStart_toStartOf="@+id/best_time"
        app:layout_constraintTop_toBottomOf="@+id/best_time" />

    <TextView
        android:id="@+id/select_dif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_diff"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/last_game_time"
        app:layout_constraintStart_toStartOf="@+id/last_game_time"
        app:layout_constraintTop_toBottomOf="@+id/last_game_time" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/customBoard_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#757575"
        android:text="@string/custom_board"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <EditText
        android:id="@+id/num_rows_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num_rows"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customBoard_btn" />

    <EditText
        android:id="@+id/num_cols_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num_cols"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/num_rows_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/num_rows_input"
        app:layout_constraintTop_toBottomOf="@+id/num_rows_input" />

    <EditText
        android:id="@+id/num_mines_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num_mines"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/num_cols_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/num_cols_input"
        app:layout_constraintTop_toBottomOf="@+id/num_cols_input" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#757575"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_dif">

        <RadioButton
            android:id="@+id/easy_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/medium_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/hard_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="#002196F3"
        android:contentDescription='@string/nothing'
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/minesweeper_heading"
        app:layout_constraintStart_toEndOf="@+id/minesweeper_heading"
        app:layout_constraintTop_toTopOf="@+id/minesweeper_heading"
        app:srcCompat="@drawable/ic_baseline_info_24" />

</androidx.constraintlayout.widget.ConstraintLayout>